--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "license": "MIT",
   "devDependencies": {
     "semantic-release": "^6.3.6",
+    "tape": "^4.8.0",
     "tslint": "^5.5.0",
     "tslint-config-airbnb": "^5.2.1",
     "typescript": "^2.4.2"
   },
   "scripts": {
     "build": "tsc --declaration",
+    "test": "node tests/unit/*.js",
     "start": "yarn build -- --watch",
     "lint": "tslint 'src/**/*.ts?(x)'",
     "lint:fix": "yarn lint -- --fix",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+  },
+  "dependencies": {
+    "deepmerge": "^1.5.0",
+    "universal-fetch": "^1.0.0"
   }
 }
