--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: node_js
 node_js: node
+
+notifications:
+  email: false
+
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
+
+before_script: npm prune
 script:
   - yarn build
   - yarn lint
