--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "module": "commonjs",
     "target": "ES5",
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "sourceMap": true,
+    "inlineSourceMap": false,
+    "declaration": true
   }
 }
