chore(ci): move from istanbul to nyc, and test on src instead of lib.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     "sourceMap": true,
     "inlineSourceMap": false,
     "declaration": true
-  }
+  },
+  "exclude": [
+    "lib",
+    "node_modules",
+    "tests"
+  ]
 }
