--- a/package.json
+++ b/package.json
@@ -11,25 +11,39 @@
   "license": "MIT",
   "devDependencies": {
     "coveralls": "^2.13.1",
-    "faucet": "^0.0.1",
-    "istanbul": "^0.4.5",
+    "nyc": "^11.1.0",
     "semantic-release": "^6.3.6",
+    "tap-nyc": "^1.0.2",
     "tape": "^4.8.0",
+    "ts-node": "^3.3.0",
     "tslint": "^5.5.0",
     "tslint-config-airbnb": "^5.2.1",
     "typescript": "^2.4.2"
   },
   "scripts": {
     "build": "tsc",
-    "test": "istanbul cover tape tests/unit/*.js | faucet",
+    "test": "nyc tape tests/unit/*.js | tap-nyc",
+    "coverage": "nyc report",
     "start": "yarn build -- --watch",
     "lint": "tslint 'src/**/*.ts?(x)'",
     "lint:fix": "yarn lint -- --fix",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "deepmerge": "^1.5.0",
     "universal-fetch": "^1.0.0"
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "tests/**"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
