--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Bart Langelaan",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.25.0"
+    "babel-runtime": "^6.25.0",
+    "get-nested": "^4.0.0",
+    "prop-types": "^15.5.10"
   },
   "nyc": {
     "extension": [
@@ -36,13 +38,14 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "hn": "^0.1.1",
-    "next": "beta",
+    "hn": "^0.2.0",
+    "next": "^2.4.9",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "semantic-release": "^6.3.6"
   },
   "scripts": {
+    "start": "npm run build -- -w",
     "build": "babel src -d lib",
     "test:next": "cd tests/functional/next && npm run build && npm start",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
