--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "deepmerge": "^1.5.0",
     "es6-promise": "^4.1.1",
     "fetch-ponyfill": "^4.1.0",
+    "get-nested": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "universal-fetch": "^1.0.0"
   },
