--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,17 @@ branches:
   except:
     - /^v\d+\.\d+\.\d+$/
 
+before_install: yarn global add greenkeeper-lockfile@1
+
+before_script: greenkeeper-lockfile-update
+
 script:
   - yarn build
   - yarn lint
   - yarn test
+
+after_script: greenkeeper-lockfile-upload
+
 after_success:
   - yarn coveralls
   - yarn semantic-release
