--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "hn": "^0.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "semantic-release": "^7.0.2"
+    "semantic-release": "^7.0.2",
+    "next": "^3.0.6"
   },
   "scripts": {
     "start": "npm run build -- -w",
