--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     ]
   },
   "peerDependencies": {
-    "hn": "^0.3.1",
-    "react": "^15.6.1",
-    "next": "^3.0.6"
+    "hn": "^0.3.3",
+    "next": "^3.0.6",
+    "react": "^15.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -39,11 +39,11 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "hn": "^0.3.1",
+    "hn": "^0.3.3",
+    "next": "^3.0.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "semantic-release": "^7.0.2",
-    "next": "^3.0.6"
+    "semantic-release": "^7.0.2"
   },
   "scripts": {
     "start": "npm run build -- -w",
