--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hn",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Connects with an Drupal website that has the hn module installed.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
-    "url": "https://github.com/bartlangelaan/hn"
+    "url": "https://github.com/burst-digital/hn"
   },
   "author": "Bart Langelaan",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "fetch-ponyfill": "^4.1.0",
     "get-nested": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "query-string": "^5.0.0",
     "universal-fetch": "^1.0.0"
   },
   "nyc": {
