--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^2.4.2"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf lib && tsc",
     "test": "nyc tape tests/unit/*.js | tap-nyc",
     "coverage": "nyc report",
     "start": "yarn build -- --watch",
@@ -38,6 +38,7 @@
     "get-nested": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "query-string": "^5.0.0",
+    "rimraf": "^2.6.2",
     "universal-fetch": "^1.0.0"
   },
   "nyc": {
