--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "get-nested": "^4.0.0",
-    "prop-types": "^15.5.10",
-    "rimraf": "^2.6.2"
+    "prop-types": "^15.5.10"
   },
   "nyc": {
     "extension": [
@@ -32,7 +31,7 @@
   "peerDependencies": {
     "hn": "^0.3.3",
     "next": "^3.0.6",
-    "react": "^15.6.1"
+    "react": "^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -44,7 +43,8 @@
     "next": "^3.0.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "semantic-release": "^7.0.2"
+    "semantic-release": "^7.0.2",
+    "rimraf": "^2.6.2"
   },
   "scripts": {
     "start": "npm run build -- -w",
