--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "get-nested": "^4.0.0",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-async-bootstrapper": "^1.1.2"
   },
   "nyc": {
     "extension": [
@@ -43,8 +44,8 @@
     "next": "^3.0.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "semantic-release": "^7.0.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "semantic-release": "^7.0.2"
   },
   "scripts": {
     "start": "npm run build -- -w",
