--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "^7.0.2"
+    "semantic-release": "^12.4.1",
+    "travis-deploy-once": "^4.3.4"
   },
   "scripts": {
     "start": "npm run build -- -w",
     "build": "rimraf lib && babel src -d lib",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   }
 }
