--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install: yarn global add greenkeeper-lockfile@1
 
 before_script: greenkeeper-lockfile-update
 
-script: yarn build
+script:
+  - yarn build
+  - yarn test
 
 after_script: greenkeeper-lockfile-upload
 
