tests(helpers): extend test helpers
 * Add more entities to mocked site
 * Return actual requested entity in mocked site.getData
 * Add new mappers

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
-  "plugins": ["transform-class-properties", "transform-runtime"],
-  "presets": ["stage-3", "react", "env"]
+  "plugins": [
+    "transform-class-properties",
+    "transform-runtime",
+    "dynamic-import-node"
+  ],
+  "presets": [
+    "stage-3",
+    "react",
+    "env"
+  ]
 }
