--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
@@ -49,6 +50,7 @@
     "semantic-release": "semantic-release",
     "test": "yarn test:unit && yarn test:lint",
     "test:unit": "jest --coverage",
+    "test:update": "yarn test:unit -- -u",
     "test:lint": "prettier 'src/**/*.js' -l && tslint 'src/**/*.js'",
     "format": "prettier 'src/**/*.js' --write -l && tslint 'src/**/*.js' --fix"
   },
