--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Bart Langelaan",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.25.0",
+    "@babel/runtime": "7.0.0-beta.40",
     "get-nested": "^4.0.0",
     "prop-types": "^15.5.10",
     "react-async-bootstrapper": "^1.1.2",
@@ -20,13 +20,16 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "@babel/cli": "7.0.0-beta.40",
+    "@babel/core": "7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.40",
+    "@babel/preset-env": "7.0.0-beta.40",
+    "@babel/preset-react": "7.0.0-beta.40",
+    "@babel/preset-stage-3": "7.0.0-beta.40",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^22.4.3",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "coveralls": "^3.0.0",
     "hn": "^0.6.1",
     "jest": "^22.3.0",
@@ -45,7 +48,7 @@
   },
   "scripts": {
     "start": "npm run build -- -w",
-    "build": "rimraf lib && babel src -d lib --ignore test.js",
+    "build": "rimraf lib && babel src -d lib --ignore **/*.test.js",
     "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release",
     "test": "yarn test:unit && yarn test:lint",
