--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "coveralls": "^2.13.1",
     "fetch-mock": "^5.12.1",
     "nyc": "^11.1.0",
+    "prettier": "^1.11.1",
     "semantic-release": "^8.0.3",
     "tap-nyc": "^1.0.2",
     "tape": "^4.8.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.5.0",
     "tslint-config-airbnb": "^5.2.1",
+    "tslint-config-prettier": "^1.10.0",
+    "tslint-react": "^3.5.1",
     "typescript": "^2.4.2"
   },
   "scripts": {
@@ -26,8 +29,8 @@
     "test": "nyc tape tests/unit/*.js | tap-nyc",
     "coverage": "nyc report",
     "start": "yarn build -- --watch",
-    "lint": "tslint 'src/**/*.ts?(x)'",
-    "lint:fix": "yarn lint -- --fix",
+    "lint": "prettier 'src/**/*.{js,ts,tsx}' -l && tslint 'src/**/*.{js,ts,tsx}'",
+    "lint:fix": "prettier 'src/**/*.{js,ts,tsx}' --write -l && tslint 'src/**/*.{js,ts,tsx}' --fix",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -52,5 +55,10 @@
     "require": [
       "ts-node/register"
     ]
+  },
+  "prettier": {
+    "printWidth": 80,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
