build: add lerna and move build deps to root
This adds the `lerna` package, and moves all build dependencies to the
root package.json.

--- a/packages/hn/package.json
+++ b/packages/hn/package.json
@@ -1,8 +1,7 @@
 {
   "name": "hn",
   "version": "0.0.0-development",
-  "description":
-    "Connects with an Drupal website that has the hn module installed.",
+  "description": "Connects with an Drupal website that has the hn module installed.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
@@ -10,34 +9,6 @@
   },
   "author": "Bart Langelaan",
   "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^22.2.2",
-    "@types/node": "^9.6.0",
-    "babel-jest": "^22.4.3",
-    "coveralls": "^2.13.1",
-    "fetch-mock": "^5.12.1",
-    "jest": "^22.4.3",
-    "prettier": "^1.11.1",
-    "semantic-release": "^8.0.3",
-    "ts-jest": "^22.4.2",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.5.0",
-    "tslint-config-airbnb": "^5.2.1",
-    "tslint-config-prettier": "^1.10.0",
-    "tslint-react": "^3.5.1",
-    "typescript": "^2.4.2"
-  },
-  "scripts": {
-    "build": "rimraf lib && tsc",
-    "test": "jest --coverage",
-    "start": "yarn build -- --watch",
-    "lint":
-      "prettier 'src/**/*.{js,ts,tsx}' -l && tslint 'src/**/*.{js,ts,tsx}'",
-    "lint:fix":
-      "prettier 'src/**/*.{js,ts,tsx}' --write -l && tslint 'src/**/*.{js,ts,tsx}' --fix",
-    "semantic-release":
-      "semantic-release pre && npm publish && semantic-release post"
-  },
   "dependencies": {
     "deepmerge": "^1.5.0",
     "es6-promise": "^4.1.1",
@@ -47,19 +18,5 @@
     "query-string": "^5.0.0",
     "rimraf": "^2.6.2",
     "universal-fetch": "^1.0.0"
-  },
-  "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,ts,tsx}"],
-    "coverageReporters": ["lcov", "text"],
-    "transform": {
-      "^.+\\.(j|t)sx?$": "ts-jest"
-    },
-    "testRegex": "src/.*(__tests__/.*|(\\.|/)(test|spec))\\.(j|t)sx?$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "json", "node"]
-  },
-  "prettier": {
-    "printWidth": 80,
-    "singleQuote": true,
-    "trailingComma": "all"
   }
 }
