--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES5",
-    "outDir": "lib",
-    "rootDir": "src",
+    "outDir": "packages/hn/lib",
+    "rootDir": "packages/hn/src",
     "sourceMap": true,
     "inlineSourceMap": false,
     "declaration": true
   },
-  "exclude": [
-    "lib",
-    "node_modules",
-    "tests"
-  ]
+  "exclude": ["packages/hn/lib", "node_modules", "packages/hn/src/__tests__"]
 }
