--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "devDependencies": {
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.0",
+    "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "coveralls": "^2.13.1",
+    "del": "^3.0.0",
     "fetch-mock": "^5.12.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^4.0.1",
     "jest": "^22.4.3",
     "lerna": "^2.9.0",
+    "merge2": "^1.2.1",
     "prettier": "^1.11.1",
     "rimraf": "^2.6.2",
     "semantic-release": "^15.1.4",
@@ -21,9 +31,9 @@
     "typescript": "^2.4.2"
   },
   "scripts": {
-    "build": "rimraf packages/hn/lib && tsc",
-    "test": "jest --coverage",
-    "start": "yarn build -- --watch",
+    "build": "gulp build",
+    "test": "tsc --noEmit && jest --coverage",
+    "start": "gulp",
     "lint":
       "prettier 'packages/**/src/**/*.{js,ts,tsx}' -l && tslint 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:fix":
