build: allow javascript files with typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./packages",
     "sourceMap": true,
     "inlineSourceMap": false,
-    "declaration": true
+    "allowJs": true,
+    "jsx": "react"
   },
-  "exclude": ["packages/*/lib", "node_modules", "packages/*/src/__tests__"]
+  "include": ["packages/*/src"]
 }
