build: exclude transpiling test files
Exclude both __tests__ folders and *.test.ts files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,10 @@
     "allowJs": true,
     "jsx": "react"
   },
-  "include": ["packages/*/src"]
+  "include": ["packages/*/src"],
+  "exclude": [
+    "packages/*/src/__tests__",
+    "packages/*/src/**/__tests__",
+    "packages/**/*.test.*"
+  ]
 }
