--- a/packages/hn-react/package.json
+++ b/packages/hn-react/package.json
@@ -2,8 +2,7 @@
   "name": "hn-react",
   "version": "0.0.0-development",
   "description": "The React implementation of Headless Ninja.",
-  "main": "lib/es5/index.js",
-  "esnext": "lib/es2015/index.js",
+  "main": "lib/index.js",
   "repository": {
     "url": "https://github.com/headless-ninja/hn-react"
   },
