--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "test": "tsc --noEmit && jest --coverage",
     "start": "gulp",
     "lint":
-      "prettier 'packages/**/src/**/*.{js,ts,tsx}' -l && tslint 'packages/**/src/**/*.{js,ts,tsx}'",
+      "prettier 'packages/*/src/**/*.{js,ts,tsx}' -l && tslint 'packages/*/src/**/*.{js,ts,tsx}'",
     "lint:fix":
-      "prettier 'packages/**/src/**/*.{js,ts,tsx}' --write -l && tslint 'packages/**/src/**/*.{js,ts,tsx}' --fix",
+      "prettier 'packages/*/src/**/*.{js,ts,tsx}' --write -l && tslint 'packages/*/src/**/*.{js,ts,tsx}' --fix",
     "postinstall": "lerna bootstrap",
     "release":
       "lerna exec -- ../../node_modules/.bin/semantic-release -e semantic-release-monorepo"
