--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lerna": "^2.9.0",
     "merge2": "^1.2.1",
     "prettier": "^1.11.1",
+    "react": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
     "semantic-release": "^15.1.4",
     "semantic-release-monorepo": "^6.0.0",
