--- a/packages/hn/package.json
+++ b/packages/hn/package.json
@@ -1,7 +1,8 @@
 {
   "name": "hn",
   "version": "0.0.0-development",
-  "description": "Connects with an Drupal website that has the hn module installed.",
+  "description":
+    "Connects with an Drupal website that has the hn module installed.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
