--- a/packages/hn-react/package.json
+++ b/packages/hn-react/package.json
@@ -9,6 +9,7 @@
   "author": "Bart Langelaan",
   "license": "MIT",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "get-nested": "^4.0.0",
     "prop-types": "^15.5.10",
     "react-async-bootstrapper": "^1.1.2",
