--- a/packages/hn/package.json
+++ b/packages/hn/package.json
@@ -11,6 +11,7 @@
   "author": "Bart Langelaan",
   "license": "MIT",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "deepmerge": "^1.5.0",
     "es6-promise": "^4.1.1",
     "fetch-ponyfill": "^4.1.0",
