build: rebase stale renovate prs

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
     "config:js-lib",
     ":semanticCommits",
     ":semanticCommitTypeAll(build)",
-    ":semanticCommitScopeDisabled"
+    ":semanticCommitScopeDisabled",
+    ":rebaseStalePrs"
   ],
   "automergeType": "branch-push",
   "devDependencies": {
