fix(build): use babel to convert to es5
Previously, Typescript transpiles the scripts to ES5, but now it just
converts to ES6 and Babel further transpiles this to compatible code.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES5",
+    "target": "ES6",
     "rootDir": "./packages",
     "sourceMap": true,
     "inlineSourceMap": false,
     "allowJs": true,
     "jsx": "react",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node"
   },
   "include": ["packages/*/src"],
   "exclude": [
