--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "hn": ["hn/src"],
       "hn-*": ["hn-*/src"]
-    }
+    },
+    "typeRoots": ["./packages/hn-react/types", "./node_modules/@types"]
   },
   "include": ["packages/*/src"],
   "exclude": [
