--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "9.6.6",
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.3.12",
+    "@types/util-deprecate": "1.0.0",
     "babel-core": "6.26.0",
     "babel-jest": "22.4.3",
     "babel-plugin-transform-runtime": "6.23.0",
