test: add typing information to tslint

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "build": "gulp build",
     "test": "tsc --noEmit && jest",
     "start": "gulp",
-    "lint": "prettier '**/*.{js,ts,tsx,json,md}' -l && tslint '**/*.{js,ts,tsx}' -c tslint.json",
-    "lint:fix": "prettier '**/*.{js,ts,tsx,json,md}' --write -l && tslint '**/*.{js,ts,tsx}' -c tslint.json --fix",
+    "lint": "prettier '**/*.{js,ts,tsx,json,md}' -l && tslint '**/*.{js,ts,tsx}' -c tslint.json -p tsconfig.json",
+    "lint:fix": "prettier '**/*.{js,ts,tsx,json,md}' --write -l && tslint '**/*.{js,ts,tsx}' -c tslint.json -p tsconfig.json --fix",
     "release": "lerna exec -- ../../node_modules/.bin/semantic-release -e semantic-release-monorepo"
   },
   "dependencies": {},
