ci: disable updating of query-string to version 6
Closes #20.

--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,9 @@
   "automergeType": "branch-push",
   "devDependencies": {
     "automerge": true
-  }
+  },
+  "packageRules": [{
+    "packageNames": ["query-string"],
+    "allowedVersions": "< 6 || >= 7"
+  }]
 }
